src/CoffeeShopsIndex.scoped.scss
// Search Form Styling
form {
  padding-left: 28px;
  margin-bottom: 20px;
  margin-top: 30px;
}

.form-input {
  max-width: 300px;
}

.fa-magnifying-glass:hover {
  color:  gray;
}

// Coffee Shops Styling
p {
  margin: 0
}
.child-row {
  padding-left: 40px;
  padding-bottom: 30px;
  padding-top: 10px;
}

.child-row:hover {
  background-color: rgb(243,237,233);
}

.btn {
  font-size: 0.8rem !important;
}

// Left Column Scroll
.left{
  height: 100vh;
  width: 105%;
  overflow: scroll;
}

